--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "firebase": "^7.3.0",
+    "jquery": "^1.9.1",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2",
-    "recompose": "^0.30.0"
+    "recompose": "^0.30.0",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
