--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.1",
+    "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.1.2",
     "recompose": "^0.30.0",
     "typescript": "^3.7.2"
