--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha server/tests",
-    "install-all": "concurrently \"npm install\" \"cd client && npm install\"",
+    "install-all": "concurrently \"npm install\" \"npm install react-responsive-carousel\" \"cd client && npm install\"",
     "client": "cd client && npm start",
     "server": "nodemon server/server.js",
     "dev": "concurrently \"nodemon server/server.js\" \"cd client && npm run start\"",
