--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.0",
+    "emailjs-com": "^2.4.1",
     "express": "^4.17.1",
     "firebase": "^7.3.0",
     "konva": "^2.6.0",
@@ -32,12 +33,13 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
     "react-gesture-gallery": "^1.1.0",
     "react-gesture-responder": "^2.1.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
+    "reactstrap": "^8.1.1",
     "recompose": "^0.30.0",
     "should": "^13.2.3",
     "supertest": "^4.0.2"
