--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "emailjs-com": "^2.4.1",
     "firebase": "^7.3.0",
     "jquery": "^1.9.1",
     "react": "^16.10.1",
@@ -11,6 +12,7 @@
     "react-dom": "^16.10.1",
     "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.1.2",
+    "reactstrap": "^8.1.1",
     "recompose": "^0.30.0",
     "typescript": "^3.7.2"
   },
